Conflicting Error code
-Used common error codes for NCMP responses

Issue-ID: CPS-1904
Signed-off-by: sourabh_sourabh <sourabh.sourabh@est.tech>
Change-Id: Id2beaa9f3d49dffd0a193b05fbaa7a6dd801e34a
Signed-off-by: sourabh_sourabh <sourabh.sourabh@est.tech>